// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordion /> it render Accordion with controlled state 1`] = `
<Accordion
  hasVerticalPaddings={false}
  isOpened={true}
  onClickAccordion={[MockFunction]}
  title="Test"
>
  <div
    className="mfui-beta-accordion mfui-beta-accordion_open"
  >
    <div
      className="mfui-beta-accordion__title-wrap"
      onClick={[Function]}
    >
      <Header
        as="h5"
        color="black"
        hAlign="inherit"
      >
        <h5
          className="mfui-beta-header mfui-beta-header_color_black mfui-beta-header_level_h5 mfui-beta-header_h-align_inherit"
        >
          Test
        </h5>
      </Header>
      <div
        className="mfui-beta-accordion__icon-box mfui-beta-accordion__icon-box_open"
      >
        <test-file-stub />
      </div>
    </div>
    <Collapse
      className="mfui-beta-accordion__content"
      classNameContainer="mfui-beta-accordion__content-inner"
      isOpened={true}
    >
      <div
        className="mfui-beta-accordion__content"
        style={
          Object {
            "height": "auto",
            "overflow": "hidden",
            "transition": "height 0.3s",
          }
        }
      >
        <div
          className="mfui-beta-accordion__content-inner"
        >
          <div />
        </div>
      </div>
    </Collapse>
  </div>
</Accordion>
`;

exports[`<Accordion /> it render Accordion with list style 1`] = `
<Accordion
  hasVerticalPaddings={false}
  isOpened={false}
  listStyle="disc"
  onClickAccordion={[MockFunction]}
  title="Test"
>
  <div
    className="mfui-beta-accordion"
  >
    <div
      className="mfui-beta-accordion__title-wrap"
      onClick={[Function]}
    >
      <Header
        as="h5"
        color="black"
        hAlign="inherit"
      >
        <h5
          className="mfui-beta-header mfui-beta-header_color_black mfui-beta-header_level_h5 mfui-beta-header_h-align_inherit"
        >
          Test
        </h5>
      </Header>
      <div
        className="mfui-beta-accordion__icon-box"
      >
        <test-file-stub />
      </div>
    </div>
    <Collapse
      className="mfui-beta-accordion__content"
      classNameContainer="mfui-beta-accordion__content-inner mfui-beta-accordion__content-inner_list-style_disc"
      isOpened={false}
    >
      <div
        className="mfui-beta-accordion__content"
        style={
          Object {
            "height": "0px",
            "overflow": "hidden",
            "transition": "height 0.3s",
          }
        }
      >
        <div
          className="mfui-beta-accordion__content-inner mfui-beta-accordion__content-inner_list-style_disc"
        >
          <div />
        </div>
      </div>
    </Collapse>
  </div>
</Accordion>
`;

exports[`<Accordion /> it render Accordion with vertical inner paddings 1`] = `
<Accordion
  hasVerticalPaddings={true}
  isOpened={false}
  onClickAccordion={[MockFunction]}
  title="Test"
>
  <div
    className="mfui-beta-accordion"
  >
    <div
      className="mfui-beta-accordion__title-wrap"
      onClick={[Function]}
    >
      <Header
        as="h5"
        color="black"
        hAlign="inherit"
      >
        <h5
          className="mfui-beta-header mfui-beta-header_color_black mfui-beta-header_level_h5 mfui-beta-header_h-align_inherit"
        >
          Test
        </h5>
      </Header>
      <div
        className="mfui-beta-accordion__icon-box"
      >
        <test-file-stub />
      </div>
    </div>
    <Collapse
      className="mfui-beta-accordion__content"
      classNameContainer="mfui-beta-accordion__content-inner mfui-beta-accordion__content-inner_v-padding"
      isOpened={false}
    >
      <div
        className="mfui-beta-accordion__content"
        style={
          Object {
            "height": "0px",
            "overflow": "hidden",
            "transition": "height 0.3s",
          }
        }
      >
        <div
          className="mfui-beta-accordion__content-inner mfui-beta-accordion__content-inner_v-padding"
        >
          <div />
        </div>
      </div>
    </Collapse>
  </div>
</Accordion>
`;

exports[`<Accordion /> it renders Accordion 1`] = `
<Accordion
  hasVerticalPaddings={false}
  isOpened={false}
  onClickAccordion={[MockFunction]}
  title="Test"
>
  <div
    className="mfui-beta-accordion"
  >
    <div
      className="mfui-beta-accordion__title-wrap"
      onClick={[Function]}
    >
      <Header
        as="h5"
        color="black"
        hAlign="inherit"
      >
        <h5
          className="mfui-beta-header mfui-beta-header_color_black mfui-beta-header_level_h5 mfui-beta-header_h-align_inherit"
        >
          Test
        </h5>
      </Header>
      <div
        className="mfui-beta-accordion__icon-box"
      >
        <test-file-stub />
      </div>
    </div>
    <Collapse
      className="mfui-beta-accordion__content"
      classNameContainer="mfui-beta-accordion__content-inner"
      isOpened={false}
    >
      <div
        className="mfui-beta-accordion__content"
        style={
          Object {
            "height": "0px",
            "overflow": "hidden",
            "transition": "height 0.3s",
          }
        }
      >
        <div
          className="mfui-beta-accordion__content-inner"
        >
          <div />
        </div>
      </div>
    </Collapse>
  </div>
</Accordion>
`;
